# mod_tabledb

./: CMakeLists.txt  SharemindModTableDbConfig.cmake.in  SharemindModTableDbConfigVersion.cmake.in  TdbConfiguration.cpp  TdbConfiguration.h  TdbModule.cpp  TdbModule.h  TdbTypesUtil.cpp  TdbTypesUtil.h  TdbVectorMap.cpp  TdbVectorMap.h  TdbVectorMapUtil.cpp  TdbVectorMapUtil.h  mod_tabledb.cpp  tdbtypes.h  tdbvectormapapi.h
packaging/configs/sharemind/conf.d/: mod-tabledb.conf
packaging/debian/: conffiles
src/: DataSource.cpp  DataSource.h  DataSourceManager.cpp  DataSourceManager.h  ModuleLoader.h  TdbConfiguration.cpp  TdbConfiguration.h  TdbModule.cpp  TdbModule.h  TdbTypesUtil.cpp  TdbTypesUtil.h  TdbVectorMap.cpp  TdbVectorMap.h  TdbVectorMapUtil.cpp  TdbVectorMapUtil.h  mod_tabledb.cpp  tdberror.h  tdbtypes.h  tdbvectormapapi.h
